--- a/app/scss/global/_global.scss
+++ b/app/scss/global/_global.scss
@@ -26,6 +26,7 @@ body {
 }
 
 html {
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
